--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
@@ -10,8 +10,8 @@
     <div class="layui-col-sm6 layui-col-md3">
         <div class="layui-card">
             <div class="layui-card-header">
-                任务组总数
-                <span class="layui-badge layui-bg-blue layuiadmin-badge">周</span>
+                项目数
+                <span class="layui-badge layui-bg-blue layuiadmin-badge">数</span>
             </div>
             <div class="layui-card-body layuiadmin-card-list">
                 <p class="layuiadmin-big-font">0</p>
@@ -25,14 +25,14 @@
     <div class="layui-col-sm6 layui-col-md3">
         <div class="layui-card">
             <div class="layui-card-header">
-                任务组有效数
+                未展示
                 <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span>
             </div>
             <div class="layui-card-body layuiadmin-card-list">
                 <p class="layuiadmin-big-font">0</p>
                 <p>
-                    新下载
-                    <span class="layuiadmin-span-color">10% <i class="layui-inline layui-icon layui-icon-face-smile-b"></i></span>
+                    未展示
+                    <span class="layuiadmin-span-color">0 <i class="layui-inline layui-icon layui-icon-face-smile-b"></i></span>
                 </p>
             </div>
         </div>
@@ -40,14 +40,14 @@
     <div class="layui-col-sm6 layui-col-md3">
         <div class="layui-card">
             <div class="layui-card-header">
-                收入
+                未展示
                 <span class="layui-badge layui-bg-green layuiadmin-badge">年</span>
             </div>
             <div class="layui-card-body layuiadmin-card-list">
 
                 <p class="layuiadmin-big-font">0</p>
                 <p>
-                    总收入
+                    未展示
                     <span class="layuiadmin-span-color">*** <i class="layui-inline layui-icon layui-icon-dollar"></i></span>
                 </p>
             </div>
@@ -56,15 +56,15 @@
     <div class="layui-col-sm6 layui-col-md3">
         <div class="layui-card">
             <div class="layui-card-header">
-                活跃用户
+                未展示
                 <span class="layui-badge layui-bg-orange layuiadmin-badge">月</span>
             </div>
             <div class="layui-card-body layuiadmin-card-list">
 
                 <p class="layuiadmin-big-font">0</p>
                 <p>
-                    最近一个月
-                    <span class="layuiadmin-span-color">15% <i class="layui-inline layui-icon layui-icon-user"></i></span>
+                    未展示
+                    <span class="layuiadmin-span-color">0 <i class="layui-inline layui-icon layui-icon-user"></i></span>
                 </p>
             </div>
         </div>
@@ -140,99 +140,49 @@
                                 <li class="layui-col-xs3">
                                     <a lay-href="home/homepage1.html">
                                         <i class="layui-icon layui-icon-console"></i>
-                                        <cite>主页一</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a lay-href="home/homepage2.html">
                                         <i class="layui-icon layui-icon-chart"></i>
-                                        <cite>主页二</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a lay-href="component/layer/list.html">
                                         <i class="layui-icon layui-icon-template-1"></i>
-                                        <cite>弹层</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a layadmin-event="im">
                                         <i class="layui-icon layui-icon-chat"></i>
-                                        <cite>聊天</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a lay-href="component/progress/index.html">
                                         <i class="layui-icon layui-icon-find-fill"></i>
-                                        <cite>进度条</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a lay-href="app/workorder/list.html">
                                         <i class="layui-icon layui-icon-survey"></i>
-                                        <cite>工单</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a lay-href="user/user/list.html">
                                         <i class="layui-icon layui-icon-user"></i>
-                                        <cite>用户</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                                 <li class="layui-col-xs3">
                                     <a lay-href="set/system/website.html">
                                         <i class="layui-icon layui-icon-set"></i>
-                                        <cite>设置</cite>
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="layui-row layui-col-space10">
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
-                                    </a>
-                                </li>
-                                <li class="layui-col-xs3">
-                                    <a lay-href="set/user/info.html">
-                                        <i class="layui-icon layui-icon-set"></i>
-                                        <cite>我的资料</cite>
+                                        <cite>未展示</cite>
                                     </a>
                                 </li>
                             </ul>
@@ -256,30 +206,25 @@
                 <tr>
                     <td>当前版本</td>
                     <td>
-                        @* <script type="text/html" template> *@
-                        @*     v{{ layui.admin.v }} *@
-                        @*     <a href="http://fly.layui.com/docs/3/" target="_blank" style="padding-left: 15px;">更新日志</a> *@
-                        @* </script> *@
+                        V1.0.0-beta.1
                     </td>
                 </tr>
                 <tr>
                     <td>基于框架</td>
                     <td>
-                        @* <script type="text/html" template> *@
-                        @*     layui-v{{ layui.v }} *@
-                        @* </script> *@
+                        .NET5 + Blazor
                     </td>
                 </tr>
                 <tr>
                     <td>主要特色</td>
-                    <td>零门槛 / 响应式 / 清爽 / 极简</td>
+                    <td>开发人员的运维管理平台</td>
                 </tr>
                 <tr>
-                    <td>获取渠道</td>
+                    <td>开源下载</td>
                     <td style="padding-bottom: 0;">
                         <div class="layui-btn-container">
-                            <a href="http://www.layui.com/admin/" target="_blank" class="layui-btn layui-btn-danger">获取授权</a>
-                            <a href="http://fly.layui.com/download/layuiAdmin/" target="_blank" class="layui-btn">立即下载</a>
+                            <a href="https://github.com/FarseerNet/FOPS" target="_blank" class="layui-btn layui-btn-danger">Github</a>
+                            <a href="https://gitee.com/FarseerNet/FOPS" target="_blank" class="layui-btn">Gitee</a>
                         </div>
                     </td>
                 </tr>
